--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
-  	<title>LogicX | Choose track</title>
   	<link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
 
   	<!-- Bootstrap -->
@@ -16,7 +15,9 @@
     {% endblock %}
 </head>
 <body>
+    {% block header %}
     <div style="background-color:black"> <img class="img-responsive center-block" style="width:10%" src="/static/images/favicon.png"> </div>
+    {% endblock %}
     <div id="content">{% block content %}{% endblock %}</div>
     <div id="footer" class = "container-fluid" style="text-align:center;">
         {% block footer %}
