--- a/templates/editor.html
+++ b/templates/editor.html
@@ -4,13 +4,16 @@
             <!-- ************  CODING ZONE  ************ -->
             <div id="code">
                 <form method="post" action="{{ url_for(target) }}">
+                    <input type="hidden" name="track" value="{{track}}">
+                    <input type="hidden" name="level" value="{{levelnum}}">
                     <div class="row row-eq-height">
                         <div id="title-code" class="head-section col-xs-6" style="padding:15px">
                             Source Code
                         </div>
                         <div class="col-xs-6">
                             <button id="launch-button" type="submit" class="btn btn-default head-section pull-right">Submit Code</button>
-                            <!-- <input id="launch-button" class="head-section pull-right" type="submit" value="Launch" /> -->
+                            <a href="/" class="btn btn-default head-section pull-right">Home</a>
+                            <button type="link" data-toggle="modal" data-target="#gameHelp" class="btn btn-default head-section pull-right">Help</button>
                         </div>
                     </div>
                     {% block code %}
