--- a/templates/editor.html
+++ b/templates/editor.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="padding:10px">
+<div class="container-fluid" style="padding:10px;">
     <div class="row row-eq-height" style="overflow:hidden;margin:10px">
         <div class="col-sm-6" >
             <!-- ************  CODING ZONE  ************ -->
@@ -13,7 +13,7 @@
                         <div class="col-xs-6">
                             <button id="launch-button" type="submit" class="btn btn-default head-section pull-right">Submit Code</button>
                             <a href="/" class="btn btn-default head-section pull-right">Home</a>
-                            <button type="link" data-toggle="modal" data-target="#gameHelp" class="btn btn-default head-section pull-right">Help</button>
+                            <a data-toggle="modal" data-target="#gameHelp" class="btn btn-default head-section pull-right">Help</a>
                         </div>
                     </div>
                     {% block code %}
@@ -31,7 +31,13 @@
                     Output result
                 </div>
                 {% block run %}
-                <textarea id="text-result" rows="18" style="width:100%" readonly>{{ resrun }}</textarea>
+                <textarea id="text-result" rows="18" style="width:100%" readonly>
+                    {%- if resrun == "" -%}
+                        No output generated.
+                    {%- else -%}
+                        {{ resrun }}
+                    {%- endif -%}
+                </textarea>
                 {% endblock %}
             </div>
         </div>
@@ -74,3 +80,6 @@
         </div>
     </div>
 </div>
+
+
+{% include "help.html" %}
